updated commands mostly